# QCC_trello_cli

./: .gitignore  README.md  pyproject.toml
calls/: hello.py
docs/: trello_structure.md
docs/meta/: goals.md
qcc_trello_cli/: qcc_trello_cli.py
tests/: test_qcc_trello_cli.py
