[tool.poetry]
name = "QCC_trello_cli"
version = "0.1.0"
description = "A small commandline utility for using Trello"
authors = ["JYSN"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
